<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Food Order App</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="visitweb">Visit our website!</string>
    <string name="name">Name</string>
    <string name="pnumber">Phone number</string>
    <string name="email">Email</string>
    <string name="confirm">Ok</string>
    <string name="cancel">Cancel</string>

</resources>
