<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Add Contact"
        android:textColor="#ffffff"
        android:textSize="45sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:gravity="center"
                android:text="@string/name"
                android:textColor="#ffffff" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:gravity="center"
                android:text="@string/pnumber"
                android:textColor="#ffffff" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:gravity="center"
                android:text="@string/email"
                android:textColor="#ffffff" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:inputType="none"
                android:textColor="#ffffff"
                android:textColorLink="#ffffff"
                android:hint="Input contact name"
                android:textCursorDrawable="@null" />

            <EditText
                android:id="@+id/et_pnumber"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:inputType="phone"
                android:textColor="#ffffff"
                android:hint="Input contact phone number"
                android:textCursorDrawable="@null" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:inputType="textEmailAddress"
                android:textColor="#ffffff"
                android:hint="Input contact email address"
                android:textCursorDrawable="@null" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/confirm"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/cancel"
            android:textColor="#ffffff" />
    </LinearLayout>

</LinearLayout>